Fixed bug #31142 (imap_mail_compose() fails to generate correct output).